--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </div>
       <!--Header here--> 
-      <div style=" background-color: darkblue; border-radius: 10px;" class="container-sm">
+      <div style=" background-color: #292b43; border-radius: 10px;" class="container-sm">
         <div class="p-3 mb-3 text-primary container-sm ">
             <h1 style=" color: darkturquoise;">Alejandro Miranda</h1>
             <span></span>
